added new programme

--- a/src/components/Homepage/Showcase/Showcase.module.css
+++ b/src/components/Homepage/Showcase/Showcase.module.css
@@ -1,6 +1,6 @@
 
 .bg{
-    background: url('../../../images/event.jpg');
+    background: url("https://i1.wp.com/www.travisagnew.org/wp-content/uploads/2012/01/united-worship-264.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
