--- a/src/components/Homepage/Showcase/Showcase.module.css
+++ b/src/components/Homepage/Showcase/Showcase.module.css
@@ -7,8 +7,8 @@
 
 }
 
-@media screen and (max-width: 480px){
+/* @media screen and (max-width: 480px){
     .bg{
         background-position: -500px 0;
     }
-}
+} */
